--- a/source/demo.css
+++ b/source/demo.css
@@ -22,6 +22,11 @@ body > div > hr {
   margin-right: -20px;
 }
 
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 /*
 Spacing.
 ==================================================
