--- a/source/demo.css
+++ b/source/demo.css
@@ -52,3 +52,42 @@ blockquote {
   margin: 0;
   margin-bottom: 20px;
 }
+
+/*
+Keep scrolling `div`.
+==================================================
+*/
+
+.keep-scrolling {
+  background: #ccc;
+  margin-bottom: 20px;
+
+  user-select: none;
+  text-align: center;
+  white-space: nowrap;
+
+  /* Dimensions. */
+  max-width: 800px;
+  height: 150vh;
+  line-height: 150vh;
+
+  position: relative;
+}
+
+.keep-scrolling::before,
+.keep-scrolling::after {
+  content: "Keep scrolling down…";
+  line-height: 1;
+
+  position: absolute;
+  left: 0;
+  right: 0;
+}
+
+.keep-scrolling::before {
+  top: 20%;
+}
+
+.keep-scrolling::after {
+  bottom: 20%;
+}
